--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "streamweb-web",
+  "name": "stream-web",
   "version": "1.0.0",
   "description": "Streamweb repurposed for the browser (dev manifest)",
   "main": "server.js",
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "express": "^4.18.2",
+  "socket.io": "^4.7.1",
     "cheerio": "^1.0.0-rc.12",
     "hls.js": "^1.4.0"
   }
